--- a/index.html
+++ b/index.html
@@ -7,12 +7,8 @@
   <body>
     <div id="volcanic-app">
       <div class="container">
-        <h1>hello </h1>
-        <div id='mocha'>
-        
-        </div>
+        <h1>Hello, world. </h1>
       </div>
-
     </div>
     <script defer> 
     </script>
